src/app/components/html/html.component.scss
.html-content{
  $inria-red : #e63312;
  $inria-red-bg : lighten($inria-red, 48%);
  $inria-blue : #40455a;
  $inria-blue-border : lighten($inria-blue, 50%);
  $inria-blue-bg : lighten($inria-blue, 64%);
  $inria-grey : #eeeff3;

  @function pow($number, $exponent) {
    $value: 1;

    @if $exponent > 0 {
      @for $i from 1 through $exponent {
        $value: $value * $number;
      }
    }

    @return $value;
  }

  @for $i from 1 through 6 {
    h#{7 - $i} {
      font-size: pow(1.125, $i) * 16px;
      font-weight: 700;
      line-height: 1;
      color:$inria-blue;
      margin: 0 0 .5em 0;
      padding: 0;
      text-transform: unset;
    }

    * + h#{7 - $i} {
      margin-top: 1em;
    }
  }

  .ill-icon{
    font-style: normal!important;
  }

  .ill-alert{
    display: flex;
    align-items: center;
    margin: 1em 0;
    background: $inria-red;

    .ill-icon{
      min-width: 50px;
      text-align: center;
      line-height: 50px;
      font-size: 20px;
      color:white;
    }

    p, ul, ol, div{
      padding: 1em;
      margin: 0;
      font-size: 16px;
      color:white;
    }

    .ill-icon + p, .ill-icon + *{
      padding:5px;
    }

    &.alert-blue{
      background: $inria-blue;
    }

    &.alert-grey{
      background: $inria-grey;

      div, p, ul, ol, .ill-icon, .ill-icon + * {
        color: $inria-blue;
      }
    }
  }

  .accordion{
    position: relative;
    margin: 1em 0;
    color: $inria-blue;

    i{
      display: inline-block;
      margin-left: 5px;
      transition: transform .25s;
      color: $inria-red;
    }

    .accordion-header{
      position: relative;
      display: flex;
      flex-direction: row-reverse;
      align-items: center;
      padding: 7px 5px 5px 5px;
      border: 1px solid $inria-blue-border;
      border-radius: 3px;
      color:$inria-blue;
      cursor: pointer;

      span {
        flex-grow: 1;
        color:$inria-blue!important;
      }
    }

    .accordion-body {
      padding: 0;
      max-height: 0;
      overflow: hidden;

      & *:first-child{
        margin-top: 0;
      }

      & *:last-child{
        margin-bottom: 0;
      }
    }

    input:checked ~ .accordion-body{
      max-height: 150rem;
      padding: .5rem;
      border: 1px solid $inria-blue-border;
      border-top: none;
      border-radius: 0 0 3px 3px;
    }

    input:checked ~ .accordion-header{
      border-radius: 3px 3px 0 0;
      i{
        transform: rotate(90deg);
      }
    }
  }
}

